output/algolFParser.java
// $ANTLR 3.5.1 /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g 2019-11-05 14:14:56

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class algolFParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "ESC_SEQ", "EXPONENT", 
		"FLOAT", "HEX_DIGIT", "ID", "IF", "INT", "OCTAL_ESC", "STRING", "THEN", 
		"UNICODE_ESC", "'('", "')'", "'+'", "','", "'-'", "':'", "':='", "';'", 
		"'ARRAY'", "'BEGIN'", "'BOOLEAN'", "'DO'", "'ELSE'", "'END'", "'FOR'", 
		"'GOTO'", "'IF'", "'INTEGER'", "'LABEL'", "'OWN'", "'POW'", "'PROCEDURE'", 
		"'REAL'", "'STEP'", "'STRING'", "'SWITCH'", "'THEN'", "'UNTIL'", "'VALUE'", 
		"'WHILE'", "'Y'", "'['", "']'"
	};
	public static final int EOF=-1;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int COMMENT=4;
	public static final int ESC_SEQ=5;
	public static final int EXPONENT=6;
	public static final int FLOAT=7;
	public static final int HEX_DIGIT=8;
	public static final int ID=9;
	public static final int IF=10;
	public static final int INT=11;
	public static final int OCTAL_ESC=12;
	public static final int STRING=13;
	public static final int THEN=14;
	public static final int UNICODE_ESC=15;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public algolFParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public algolFParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return algolFParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g"; }


	public static class prog_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "prog"
	// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:21:1: prog : prog1 ;
	public final algolFParser.prog_return prog() throws RecognitionException {
		algolFParser.prog_return retval = new algolFParser.prog_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope prog11 =null;


		try {
			// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:21:6: ( prog1 )
			// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:21:8: prog1
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_prog1_in_prog61);
			prog11=prog1();
			state._fsp--;

			adaptor.addChild(root_0, prog11.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "prog"


	public static class expression_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "expression"
	// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:24:1: expression : ( simpleAR | ifclause ei );
	public final algolFParser.expression_return expression() throws RecognitionException {
		algolFParser.expression_return retval = new algolFParser.expression_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope simpleAR2 =null;
		ParserRuleReturnScope ifclause3 =null;
		ParserRuleReturnScope ei4 =null;


		try {
			// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:25:2: ( simpleAR | ifclause ei )
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==ID||LA1_0==INT||LA1_0==16) ) {
				alt1=1;
			}
			else if ( (LA1_0==32) ) {
				alt1=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}

			switch (alt1) {
				case 1 :
					// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:25:4: simpleAR
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_simpleAR_in_expression74);
					simpleAR2=simpleAR();
					state._fsp--;

					adaptor.addChild(root_0, simpleAR2.getTree());

					}
					break;
				case 2 :
					// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:25:15: ifclause ei
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_ifclause_in_expression78);
					ifclause3=ifclause();
					state._fsp--;

					adaptor.addChild(root_0, ifclause3.getTree());

					pushFollow(FOLLOW_ei_in_expression80);
					ei4=ei();
					state._fsp--;

					adaptor.addChild(root_0, ei4.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "expression"


	public static class ei_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "ei"
	// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:28:1: ei : simpleDesign 'ELSE' ;
	public final algolFParser.ei_return ei() throws RecognitionException {
		algolFParser.ei_return retval = new algolFParser.ei_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token string_literal6=null;
		ParserRuleReturnScope simpleDesign5 =null;

		CommonTree string_literal6_tree=null;

		try {
			// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:28:4: ( simpleDesign 'ELSE' )
			// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:28:6: simpleDesign 'ELSE'
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_simpleDesign_in_ei91);
			simpleDesign5=simpleDesign();
			state._fsp--;

			adaptor.addChild(root_0, simpleDesign5.getTree());

			string_literal6=(Token)match(input,28,FOLLOW_28_in_ei93); 
			string_literal6_tree = (CommonTree)adaptor.create(string_literal6);
			adaptor.addChild(root_0, string_literal6_tree);

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "ei"


	public static class simpleAR_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "simpleAR"
	// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:31:1: simpleAR : simpleARi ( ':=' simpleARi )* ;
	public final algolFParser.simpleAR_return simpleAR() throws RecognitionException {
		algolFParser.simpleAR_return retval = new algolFParser.simpleAR_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token string_literal8=null;
		ParserRuleReturnScope simpleARi7 =null;
		ParserRuleReturnScope simpleARi9 =null;

		CommonTree string_literal8_tree=null;

		try {
			// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:31:9: ( simpleARi ( ':=' simpleARi )* )
			// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:31:11: simpleARi ( ':=' simpleARi )*
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_simpleARi_in_simpleAR103);
			simpleARi7=simpleARi();
			state._fsp--;

			adaptor.addChild(root_0, simpleARi7.getTree());

			// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:31:20: ( ':=' simpleARi )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==22) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:31:21: ':=' simpleARi
					{
					string_literal8=(Token)match(input,22,FOLLOW_22_in_simpleAR105); 
					string_literal8_tree = (CommonTree)adaptor.create(string_literal8);
					adaptor.addChild(root_0, string_literal8_tree);

					pushFollow(FOLLOW_simpleARi_in_simpleAR107);
					simpleARi9=simpleARi();
					state._fsp--;

					adaptor.addChild(root_0, simpleARi9.getTree());

					}
					break;

				default :
					break loop2;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "simpleAR"


	public static class simpleARi_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "simpleARi"
	// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:34:1: simpleARi : multExp ( ( '+' ^| '-' ^) multExp )* ;
	public final algolFParser.simpleARi_return simpleARi() throws RecognitionException {
		algolFParser.simpleARi_return retval = new algolFParser.simpleARi_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal11=null;
		Token char_literal12=null;
		ParserRuleReturnScope multExp10 =null;
		ParserRuleReturnScope multExp13 =null;

		CommonTree char_literal11_tree=null;
		CommonTree char_literal12_tree=null;

		try {
			// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:34:10: ( multExp ( ( '+' ^| '-' ^) multExp )* )
			// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:34:12: multExp ( ( '+' ^| '-' ^) multExp )*
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_multExp_in_simpleARi119);
			multExp10=multExp();
			state._fsp--;

			adaptor.addChild(root_0, multExp10.getTree());

			// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:34:19: ( ( '+' ^| '-' ^) multExp )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==18||LA4_0==20) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:34:20: ( '+' ^| '-' ^) multExp
					{
					// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:34:20: ( '+' ^| '-' ^)
					int alt3=2;
					int LA3_0 = input.LA(1);
					if ( (LA3_0==18) ) {
						alt3=1;
					}
					else if ( (LA3_0==20) ) {
						alt3=2;
					}

					else {
						NoViableAltException nvae =
							new NoViableAltException("", 3, 0, input);
						throw nvae;
					}

					switch (alt3) {
						case 1 :
							// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:34:21: '+' ^
							{
							char_literal11=(Token)match(input,18,FOLLOW_18_in_simpleARi122); 
							char_literal11_tree = (CommonTree)adaptor.create(char_literal11);
							root_0 = (CommonTree)adaptor.becomeRoot(char_literal11_tree, root_0);

							}
							break;
						case 2 :
							// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:34:28: '-' ^
							{
							char_literal12=(Token)match(input,20,FOLLOW_20_in_simpleARi127); 
							char_literal12_tree = (CommonTree)adaptor.create(char_literal12);
							root_0 = (CommonTree)adaptor.becomeRoot(char_literal12_tree, root_0);

							}
							break;

					}

					pushFollow(FOLLOW_multExp_in_simpleARi131);
					multExp13=multExp();
					state._fsp--;

					adaptor.addChild(root_0, multExp13.getTree());

					}
					break;

				default :
					break loop4;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "simpleARi"


	public static class multExp_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "multExp"
	// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:39:1: multExp : powExp ( 'POW' ^ powExp )* ;
	public final algolFParser.multExp_return multExp() throws RecognitionException {
		algolFParser.multExp_return retval = new algolFParser.multExp_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token string_literal15=null;
		ParserRuleReturnScope powExp14 =null;
		ParserRuleReturnScope powExp16 =null;

		CommonTree string_literal15_tree=null;

		try {
			// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:39:9: ( powExp ( 'POW' ^ powExp )* )
			// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:39:11: powExp ( 'POW' ^ powExp )*
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_powExp_in_multExp147);
			powExp14=powExp();
			state._fsp--;

			adaptor.addChild(root_0, powExp14.getTree());

			// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:39:17: ( 'POW' ^ powExp )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==36) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:39:18: 'POW' ^ powExp
					{
					string_literal15=(Token)match(input,36,FOLLOW_36_in_multExp149); 
					string_literal15_tree = (CommonTree)adaptor.create(string_literal15);
					root_0 = (CommonTree)adaptor.becomeRoot(string_literal15_tree, root_0);

					pushFollow(FOLLOW_powExp_in_multExp152);
					powExp16=powExp();
					state._fsp--;

					adaptor.addChild(root_0, powExp16.getTree());

					}
					break;

				default :
					break loop5;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "multExp"


	public static class powExp_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "powExp"
	// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:42:1: powExp : ( identifier actualparametrepart | '(' expression ')' | INT );
	public final algolFParser.powExp_return powExp() throws RecognitionException {
		algolFParser.powExp_return retval = new algolFParser.powExp_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal19=null;
		Token char_literal21=null;
		Token INT22=null;
		ParserRuleReturnScope identifier17 =null;
		ParserRuleReturnScope actualparametrepart18 =null;
		ParserRuleReturnScope expression20 =null;

		CommonTree char_literal19_tree=null;
		CommonTree char_literal21_tree=null;
		CommonTree INT22_tree=null;

		try {
			// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:42:8: ( identifier actualparametrepart | '(' expression ')' | INT )
			int alt6=3;
			switch ( input.LA(1) ) {
			case ID:
				{
				alt6=1;
				}
				break;
			case 16:
				{
				alt6=2;
				}
				break;
			case INT:
				{
				alt6=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}
			switch (alt6) {
				case 1 :
					// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:42:10: identifier actualparametrepart
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_identifier_in_powExp165);
					identifier17=identifier();
					state._fsp--;

					adaptor.addChild(root_0, identifier17.getTree());

					pushFollow(FOLLOW_actualparametrepart_in_powExp167);
					actualparametrepart18=actualparametrepart();
					state._fsp--;

					adaptor.addChild(root_0, actualparametrepart18.getTree());

					}
					break;
				case 2 :
					// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:43:11: '(' expression ')'
					{
					root_0 = (CommonTree)adaptor.nil();


					char_literal19=(Token)match(input,16,FOLLOW_16_in_powExp179); 
					char_literal19_tree = (CommonTree)adaptor.create(char_literal19);
					adaptor.addChild(root_0, char_literal19_tree);

					pushFollow(FOLLOW_expression_in_powExp181);
					expression20=expression();
					state._fsp--;

					adaptor.addChild(root_0, expression20.getTree());

					char_literal21=(Token)match(input,17,FOLLOW_17_in_powExp183); 
					char_literal21_tree = (CommonTree)adaptor.create(char_literal21);
					adaptor.addChild(root_0, char_literal21_tree);

					}
					break;
				case 3 :
					// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:44:11: INT
					{
					root_0 = (CommonTree)adaptor.nil();


					INT22=(Token)match(input,INT,FOLLOW_INT_in_powExp195); 
					INT22_tree = (CommonTree)adaptor.create(INT22);
					adaptor.addChild(root_0, INT22_tree);

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "powExp"


	public static class identifier_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "identifier"
	// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:47:1: identifier : ID ;
	public final algolFParser.identifier_return identifier() throws RecognitionException {
		algolFParser.identifier_return retval = new algolFParser.identifier_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token ID23=null;

		CommonTree ID23_tree=null;

		try {
			// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:48:2: ( ID )
			// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:48:4: ID
			{
			root_0 = (CommonTree)adaptor.nil();


			ID23=(Token)match(input,ID,FOLLOW_ID_in_identifier207); 
			ID23_tree = (CommonTree)adaptor.create(ID23);
			adaptor.addChild(root_0, ID23_tree);

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "identifier"


	public static class prog1_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "prog1"
	// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:52:1: prog1 : ( begin EOF | ( label ':' )+ begin );
	public final algolFParser.prog1_return prog1() throws RecognitionException {
		algolFParser.prog1_return retval = new algolFParser.prog1_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token EOF25=null;
		Token char_literal27=null;
		ParserRuleReturnScope begin24 =null;
		ParserRuleReturnScope label26 =null;
		ParserRuleReturnScope begin28 =null;

		CommonTree EOF25_tree=null;
		CommonTree char_literal27_tree=null;

		try {
			// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:52:7: ( begin EOF | ( label ':' )+ begin )
			int alt8=2;
			int LA8_0 = input.LA(1);
			if ( (LA8_0==25) ) {
				alt8=1;
			}
			else if ( (LA8_0==ID) ) {
				alt8=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 8, 0, input);
				throw nvae;
			}

			switch (alt8) {
				case 1 :
					// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:52:10: begin EOF
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_begin_in_prog1221);
					begin24=begin();
					state._fsp--;

					adaptor.addChild(root_0, begin24.getTree());

					EOF25=(Token)match(input,EOF,FOLLOW_EOF_in_prog1223); 
					EOF25_tree = (CommonTree)adaptor.create(EOF25);
					adaptor.addChild(root_0, EOF25_tree);

					}
					break;
				case 2 :
					// /media/mathias/OS/Users/lemat/Documents/Scolarité/PCL/Oberti2u/algolF.g:53:19: ( label ':' )+ begin
					{
					root_0 = (CommonTree)adaptor.nil();

